[gd_scene load_steps=4 format=3 uid="uid://c07vomp7g6ykc"]

[ext_resource type="Texture2D" uid="uid://cdhl1vj7qtpwj" path="res://assets/textures/hacker.png" id="1_ca1cp"]
[ext_resource type="Script" path="res://scripts/phisherHard.gd" id="1_qrrc0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3cl5t"]
size = Vector2(513.333, 506.667)

[node name="PhisherHard" type="Area2D"]
scale = Vector2(0.25, 0.25)
collision_layer = 32
collision_mask = 261
script = ExtResource("1_qrrc0")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ca1cp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visibility_layer = 32
position = Vector2(-3.33332, 6.66667)
shape = SubResource("RectangleShape2D_3cl5t")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(7.62939e-06, -420)
scale = Vector2(6, 6.33333)

[node name="Panel" type="Panel" parent="."]
offset_left = -255.0
offset_top = 144.0
offset_right = 257.0
offset_bottom = 254.0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 510.0
offset_bottom = 116.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 55
text = "$ecureP@ssw0rd47"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
